Tue Sep 21 16:27:19 2004  Manish Singh  <yosh@gimp.org>

	* gdk/gdk.c: remove now unused arg variables.

	* gdk/gdkinternals.h: declare _gdk_windowing_init ().

	* gtk/gtkmain.c (do_pre_parse_initialization): call gdk_parse_args ()
	here instead of gdk_pre_parse_libgtk_only (). Should fix #153082.

2004-09-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond): 
	Don't assert that current_focus != NULL, just return FALSE.

	* gtk/gtkpathbar.c (gtk_path_bar_size_request): Give the path
	bar arrows some more space.

	* configure.in: Check for mallinfo.

	* tests/testtreemodel.c: Only include malloc.h if HAVE_MALLINFO
	is defined.  (#153168, Darren Creutz)

	* gtk/gtkactiongroup.c: Fix typos in signal docs.  (#153224,
	John Finlay)

Mon Sep 20 19:44:58 2004  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_iter): Don't
	return FALSE from a void function.  (#153185, Joel Fredrikson)

2004-09-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.c (gtk_button_class_init): Add a boolean ::displace-focus
	style property and apply child displacement to the focus rectangle 
	if it is TRUE.  (#141170, Soeren Sandmann)

Sun Sep 19 23:56:18 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenu.c (MENU_SCROLL_TIMEOUT2): Change from 50 to 20 to
	make the menus scroll faster.

2004-09-19  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.5.3 ===

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Make GtkFileChooserButton activatable via mnemonics.
	(#152925, Dennis Cranston, patch by James M. Cape)

	* gtk/gtkfilechooserbutton.c: Add a ::mnemonic-activate signal
	and a suitable default handler.

	* tests/testfilechooserbutton.c: Add a mnemonic.

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Fix win32 build errors.  (#153032, #153028, Robert Ögren)

	* gdk/win32/gdkmain-win32.c: Make it compile.  
