@@ -1,3 +1,8 @@
+Tue Sep 21 16:55:38 2004  Manish Singh  <yosh@gimp.org>
+
+	* tests/testtreemodel.c: #include <config.h> for HAVE_MALLINFO define,
+	other minor cleanups.
+
 Tue Sep 21 16:27:19 2004  Manish Singh  <yosh@gimp.org>
 
 	* gdk/gdk.c: remove now unused arg variables.
